--- a/index.html
+++ b/index.html
@@ -62,7 +62,36 @@
     </header>
     <main class="main">
         <section class="main-sesction center">
-            <div class="main data">mani</div>
+            <div class="main data">
+                <section class="about-us">
+                    <div class="container">
+                        <div class="about-us__right">
+                            <div class="about-us__titles">
+                                <p class="about-us__title">داستان ما</p>
+                                <h3 class="about-us__title">سخنی درباره ما</h3>
+                                <div class="about-us__descriptions">
+                                    <span class="about-us__q">ک</span>
+                                    <div class="about-us__description">
+                                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
+                                    </div>
+                                </div>
+                                </div>
+                                <div class="about-us dot"></div>
+                                <div class="about__us__main">
+                                    <ul class="abou-us__lists">
+                                        <li class="about-us__list"><i class="fa-thin fa-plate-utensils"></i>fsdfdsfsdf</li>
+                                        <li class="about-us__list"><i class="fa-thin fa-pan-food"></i>dasdsadsad</li>
+                                        <li class="about-us__list"><i class="fa-thin fa-bowl-chopsticks-noodles"></i>dsadasda</li>
+                                    </ul>
+                                </div>
+                                <div class="about-us__button">Read More About Us</div>
+                        </div>
+                       <div class="about-us__left">
+                        <img src="" class="about-us__image"/>
+                    </div>
+                </div>
+                </section>
+            </div>
             <div class="static">
                 <div class="container">
                     <div class="overlay"></div>
