feat:about-us__right

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
                     <span class="header__dot"></span>
                 </div>
                 <div class="header-content__top">
+                    <div class="header__socials">
+                        <div class="header__social"><i class="fa-brands fa-facebook-f" style="color: #D5AD72;"></i></div>
+                        <div class="header__social"><i class="fa-brands fa-instagram" style="color: #D5AD72;"></i></div>
+                        <div class="header__social"><i class="fa-brands fa-tiktok" style="color: #D5AD72;"></i></div>
+                        <div class="header__social"><i class="fa-brands fa-tiktok" style="color: #D5AD72;"></i></div>
+                    </div>  
                     <div class="header-content__item">
                         <div class="header-content__left">
                             <p class="header-content__info">دارای بهترین خدمات و برترین خوراک ها</p>
@@ -59,12 +65,7 @@
                             <button class="header-content__button">در منوی ما جستجو کنید</button>
                         </div>
                     </div>
-                    <div class="header__socials">
-                        <div class="header__social"><i class="fa-brands fa-facebook-f" style="color: #D5AD72;"></i></div>
-                        <div class="header__social"><i class="fa-brands fa-instagram" style="color: #D5AD72;"></i></div>
-                        <div class="header__social"><i class="fa-brands fa-tiktok" style="color: #D5AD72;"></i></div>
-                        <div class="header__social"><i class="fa-brands fa-tiktok" style="color: #D5AD72;"></i></div>
-                    </div>    
+                     
                 </div>
                 <div class="header-bottom ">
                     <div class="header-bottom__content center">
@@ -86,28 +87,45 @@
             <div class="main data">
                 <section class="about-us">
                     <div class="container">
-                        <div class="about-us__right">
-                            <div class="about-us__titles">
-                                <p class="about-us__title">داستان ما</p>
-                                <h3 class="about-us__title">سخنی درباره ما</h3>
-                                <div class="about-us__descriptions">
-                                    <span class="about-us__q">ک</span>
-                                    <div class="about-us__description">
-                                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
+                        <img src="./Images/2.png" class="about-us__flower">
+
+                        <div class="about-us__wrapper center">
+                            <div class="about-us__right">
+                                <div class="about-us__titles">
+                                    <p class="about-us__title">داستان ما</p>
+                                    <h3 class="about-us__title-big">چند سخن درباره ما</h3>
+                                    <div class="about-us__descriptions center">
+                                        <div class="about-us__description">
+                                             اپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشلورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
+                                        </div>
+                                    </div>
+                                    </div>
+                                    <div class="about__us__main">
+                                        <ul class="abou-us__lists">
+                                            <li class="about-us__list"><i class="icon-f fas fa-bacon" style="color: #D5AD72;"></i>کنترل اسلحه مقیاس پذیر باعث پیشرفت جنبش اجتماعی می شود.</li>
+                                            <li class="about-us__list"><i class="icon-f fas fa-bread-slice" style="color: #D5AD72;"></i>رویکردهای تکراری برای تقویت استراتژی شرکت</li>
+                                            <li class="about-us__list"><i class="icon-f fas fa-drumstick-bite	" style="color: #D5AD72;"></i>از چارچوب های چابک برای ارائه خلاصه ای قوی استفاده کنید.</li>
+                                        </ul>
+                                    </div>
+                                    <button class="about-us__readmore">بیشتر در باره ما بخوانید</button>
+                            </div>
+                            <div class="about-us__left">
+                                <div class="about-us__search"><a class="about-us__search-link"><i class="fa fa-search" aria-hidden="true"></i>
+                                </a></div>
+                                <div class="about-us__buttons">
+                                    <div class="about-us__button">
+                                        <span class="about-us__pagination">.</span>
+                                        <span class="about-us__pagination">.</span>
+                                        <span class="about-us__pagination">.</span>
+                                    </div>
+                                    <div class="about-us__button">
+                                        <span class="about-us__button-event next"><i class="fa-solid fa-chevron-right"></i></span>
+                                        <span class="about-us__button-event perve"><i class="fa-solid fa-chevron-left"></i></span>
                                     </div>
                                 </div>
                                 </div>
-                                <div class="about-us dot"></div>
-                                <div class="about__us__main">
-                                    <ul class="abou-us__lists">
-                                        <li class="about-us__list"><i class="fa-thin fa-plate-utensils"></i>fsdfdsfsdf</li>
-                                        <li class="about-us__list"><i class="fa-thin fa-pan-food"></i>dasdsadsad</li>
-                                        <li class="about-us__list"><i class="fa-thin fa-bowl-chopsticks-noodles"></i>dsadasda</li>
-                                    </ul>
-                                </div>
-                                <div class="about-us__button">Read More About Us</div>
                         </div>
-                       <div class="about-us__left">
+                     
                         <img src="" class="about-us__image"/>
                     </div>
                 </div>
