--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
                                 </a></div>
                                 <div class="about-us__buttons center">
                                     <div class="about-us__button center">
-                                        <span class="about-us__button-event next"><i class="fa-solid fa-chevron-right"></i></span>
-                                        <span class="about-us__button-event perve"><i class="fa-solid fa-chevron-left"></i></span>
+                                        <span class="about-us__button-event next"><i class="about-us__button-icon fa-solid fa-chevron-right"></i></span>
+                                        <span class="about-us__button-event perve"><i class="about-us__button-icon fa-solid fa-chevron-left"></i></span>
                                     </div>
                                     <div class="about-us__button">
-                                        <span class="about-us__pagination"></span>
-                                        <span class="about-us__pagination"></span>
-                                        <span class="about-us__pagination"></span>
+                                        <!--  وقتی خواستی جاوا اسکریپت بنویسی انجامش بده<span class="about-us__pagination">.</span>
+                                        <span class="about-us__pagination">.</span>
+                                        <span class="about-us__pagination">.</span> -->
                                     </div>
                                    
                                 </div>
