feat:Book-Table Html

--- a/index.html
+++ b/index.html
@@ -131,6 +131,31 @@
                     </div>
                 </div>
                 </section>
+                <section class="book-table">
+                    <div class="container">
+                        <div class="book-table__titles">
+                            <p class="book-table__title top">رزرو میز</p>
+                            <h3 class="book-table__title main">رویداد های پیش رو</h3>
+                        </div>
+                        <div class="book-table__dot"></div>
+                        <div class="book-table__main">
+                            <div class="book-table__content">
+                                <div class="book-table__border"></div>
+                                <div class="book-table__content-titles">
+                                    <h3 class="book-table__content-title main">فستیوال خوراک بهار</h3>
+                                    <p class="book-table__content-title bottom">83/1/5</p>
+                                </div>
+                                <p class="book-table__content-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
+                                <div class="book-table__content-end"></div>
+                            </div>
+                            <div class="book-table__bottom center">
+                                <i class="fas fa-chevron-right"></i>
+                                <p class="book-table__number">3/4</p>
+                                <i class="fas fa-chevron-left"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
             <div class="static">
                 <div class="container">
