--- a/index.html
+++ b/index.html
@@ -330,6 +330,41 @@
                         </div>
                     </div>
                 </section>
+                <section class="section-comment">
+                    <div class="container">
+                        <div class="section-comment__wrapper">
+                            <div class="section-comment__titles">
+                                <p class="section-comment__title-top">دیگران درباره ما چه می گویند</p>
+                                <h3 class="section-comment__title">نظرات</h3>
+                            </div>
+                            <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
+                            <div class="section-comment__main-wrapper ">
+                                <div class="section-comment__main">
+                                    <div class="section-comment__image-container">
+                                        <img src="./Images/man.jpg" class="section-comment__image">
+                                    </div>
+                                    <div class="section-comment__titles">
+                                        <h3 class="section-comment__name">مانی فنایی</h3>
+                                        <p class="section-comment__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیلورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک اس ک اس
+                                        </p>
+                                    </div>
+                                    <div class="section-comment__stars">
+                                        <i class="section-comment__star fa-solid fa-star"></i>
+                                        <i class="section-comment__star fa-solid fa-star"></i>
+                                        <i class="section-comment__star fa-solid fa-star"></i>
+                                        <i class="section-comment__star fa-solid fa-star"></i>
+                                        <i class="section-comment__star fa-solid fa-star"></i>
+                                        <i class="section-comment__star fa-solid fa-star"></i>
+                                    </div>
+                                    <span class="section-comment__number">01.</span>
+                                </div>  
+                                
+                            </div>
+                               
+                            <div class="section-comment__pagination"></div>
+                        </div>
+                    </div>
+                </section>
             </div>
             <!-- <div class="static">
                 <div class="container">
@@ -420,3 +455,4 @@
     </footer>
 </body>
 </html>
+<!-- برای اسلاید ها از کتابخانه استفاده کنم یا جاوااسکریپت خام -->
