feat:finishedpro-video

--- a/about us.html
+++ b/about us.html
@@ -112,6 +112,18 @@
                     </div>
                 </div>
             </section>
+            <section class="pro-video">
+                <div class="container">
+                    <div class="pro-video__wrapper">
+                        <h3 class="pro-video__title">ویدیوی تبلیغاتی ما</h3>
+                        <p class="pro-video__caption">برای شروع سفر هیجان انگیز خود آماده شوید.
+                            رستوران ما شما را در دنیای غذاهای شگفت انگیز هدایت می کند.</p>
+                            <div class="pro-video__play"><i class="pro-video__icon fa-solid fa-play" style="color: #ccccd1;"></i></div>
+                    </div>
+                   
+                </div>
+                <div class="pro-video__dark"></div>
+            </section>
         </div>
       
     </div>
