--- a/about us.html
+++ b/about us.html
@@ -124,6 +124,37 @@
                 </div>
                 <div class="pro-video__dark"></div>
             </section>
+            <section class='section-team'>
+                <div class="container">
+                    <div class="section-team__wrapper">
+                        <div class="book-table__titles">
+                            <p class="book-table__title-top">تیم عالی ما</p>
+                            <h3 class="book-table__title">سرآشپز های ما</h3>
+                        </div>
+                        <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
+                        <div class="section-team__teams">
+                            <div class="section-team__team">
+                                <div class="section-team__team-top">
+                                    <div class="section-team__team-image-container">
+                                        <img src="" class="section-team__team-image">
+                                    </div>
+                                    <div class="section-team__detail">
+                                        <h3 class="section-team__title">دنبال کردن</h3>
+                                        <div class="section-team__socials">
+                                            <div class="section-team__social"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="section-team__content">
+                                    <h3 class="section-team__title">مانی فنایی</ا>
+                                    <p class="section-team__caption">سرآشپز حرف ای در فرانسه</p>
+                                    <p class='section-team__description'>سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
       
     </div>
