--- a/about us.html
+++ b/about us.html
@@ -132,21 +132,74 @@
                             <h3 class="book-table__title">سرآشپز های ما</h3>
                         </div>
                         <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
-                        <div class="section-team__teams">
+                        <div class="section-team__teams center">
                             <div class="section-team__team">
-                                <div class="section-team__team-top">
+                                <div class="section-team__team-top center">
                                     <div class="section-team__team-image-container">
-                                        <img src="" class="section-team__team-image">
+                                        <img src="./Images/chef2.jpg" class="section-team__team-image">
+                                        <div class="team__dark"></div>
                                     </div>
                                     <div class="section-team__detail">
                                         <h3 class="section-team__title">دنبال کردن</h3>
-                                        <div class="section-team__socials">
-                                            <div class="section-team__social"></div>
+                                        <div class="footer__socials center">
+                                            <div class="footer__social"><i class="fa-brands fa-facebook-f" style="color: #D5AD72;"></i></div>
+                                            <div class="footer__social"><i class="fa-brands fa-instagram" style="color: #D5AD72;"></i></div>
+                                            <div class="footer__social"><i class="fa-brands fa-tiktok" style="color: #D5AD72;"></i></div>
+                                            <div class="footer__social"><i class="fa-brands fa-tiktok" style="color: #D5AD72;"></i></div>
+
                                         </div>
                                     </div>
                                 </div>
                                 <div class="section-team__content">
-                                    <h3 class="section-team__title">مانی فنایی</ا>
+                                    <h3 class="section-team__title">مانی فنایی</ا></h3>
+                                    <div class="section-team__content-bottom">
+                                        <p class="section-team__caption">سرآشپز حرف ای در فرانسه</p>
+                                        <p class='section-team__description'>سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="section-team__team">
+                                <div class="section-team__team-top center">
+                                    <div class="section-team__team-image-container">
+                                        <img src="./Images/chef2.jpg" class="section-team__team-image">
+                                        <div class="team__dark"></div>
+                                    </div>
+                                    <div class="section-team__detail">
+                                        <h3 class="section-team__title">دنبال کردن</h3>
+                                        <div class="footer__socials center">
+                                            <div class="footer__social"><i class="fa-brands fa-facebook-f" style="color: #D5AD72;"></i></div>
+                                            <div class="footer__social"><i class="fa-brands fa-instagram" style="color: #D5AD72;"></i></div>
+                                            <div class="footer__social"><i class="fa-brands fa-tiktok" style="color: #D5AD72;"></i></div>
+                                            <div class="footer__social"><i class="fa-brands fa-tiktok" style="color: #D5AD72;"></i></div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="section-team__content">
+                                    <h3 class="section-team__title">مانی فنایی</ا></h3>
+                                    <p class="section-team__caption">سرآشپز حرف ای در فرانسه</p>
+                                    <p class='section-team__description'>سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد</p>
+                                </div>
+                            </div>
+                            <div class="section-team__team">
+                                <div class="section-team__team-top center">
+                                    <div class="section-team__team-image-container">
+                                        <img src="./Images/chef2.jpg" class="section-team__team-image">
+                                        <div class="team__dark"></div>
+                                    </div>
+                                    <div class="section-team__detail">
+                                        <h3 class="section-team__title">دنبال کردن</h3>
+                                        <div class="footer__socials center">
+                                            <div class="footer__social"><i class="fa-brands fa-facebook-f" style="color: #D5AD72;"></i></div>
+                                            <div class="footer__social"><i class="fa-brands fa-instagram" style="color: #D5AD72;"></i></div>
+                                            <div class="footer__social"><i class="fa-brands fa-tiktok" style="color: #D5AD72;"></i></div>
+                                            <div class="footer__social"><i class="fa-brands fa-tiktok" style="color: #D5AD72;"></i></div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="section-team__content">
+                                    <h3 class="section-team__title">مانی فنایی</ا></h3>
                                     <p class="section-team__caption">سرآشپز حرف ای در فرانسه</p>
                                     <p class='section-team__description'>سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد</p>
                                 </div>
