feat:finished about us

--- a/about us.html
+++ b/about us.html
@@ -136,7 +136,7 @@
                             <div class="section-team__team">
                                 <div class="section-team__team-top center">
                                     <div class="section-team__team-image-container">
-                                        <img src="./Images/chef2.jpg" class="section-team__team-image">
+                                        <img src="./Images/chef1.jpg" class="section-team__team-image">
                                         <div class="team__dark"></div>
                                     </div>
                                     <div class="section-team__detail">
@@ -184,7 +184,7 @@
                             <div class="section-team__team">
                                 <div class="section-team__team-top center">
                                     <div class="section-team__team-image-container">
-                                        <img src="./Images/chef2.jpg" class="section-team__team-image">
+                                        <img src="./Images/chef3.jpg" class="section-team__team-image">
                                         <div class="team__dark"></div>
                                     </div>
                                     <div class="section-team__detail">
@@ -203,6 +203,27 @@
                                     <p class="section-team__caption">سرآشپز حرف ای در فرانسه</p>
                                     <p class='section-team__description'>سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد</p>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
+
+                    <div class="section-team__letter">
+                        <div class="section-team__letter-wrapper center">
+                        
+                        <div class="section-team__letter-content">
+                                <h3 class="section-team__letter-title">کوین کوالسکی - رئیس رستوران</h3>
+                                <p class="section-team__letter-caption">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است لورم اپیسوم متنی ساختگی</p>
+                                <div class="section-comment__stars">
+                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                    <i class="section-comment__star fa-solid fa-star"></i>
+                                </div>
+                            </div>
+                            <div class="section-team__letter-image-container">
+                                <img src="./Images/citte-dec.png" class="section-team__letter-image">
                             </div>
                         </div>
                     </div>
