--- a/about us.html
+++ b/about us.html
@@ -26,10 +26,10 @@
                                         </div>
                                         </div>
                                         <div class="about__us__main">
-                                            <ul class="section-our-story__lists">
-                                                <li class="section-our-story__list"><i class="icon-f fas fa-bacon" style="color: #D5AD72;"></i>کنترل اسلحه مقیاس پذیر باعث پیشرفت جنبش اجتماعی می شود.</li>
-                                                <li class="section-our-story__list"><i class="icon-f fas fa-bread-slice" style="color: #D5AD72;"></i>رویکردهای تکراری برای تقویت استراتژی شرکت</li>
-                                                <li class="section-our-story__list"><i class="icon-f fas fa-drumstick-bite	" style="color: #D5AD72;"></i>از چارچوب های چابک برای ارائه خلاصه ای قوی استفاده کنید.</li>
+                                            <ul class="abou-us__lists">
+                                                <li class="about-us__list"><i class="icon-f fas fa-bacon" style="color: #D5AD72;"></i>کنترل اسلحه مقیاس پذیر باعث پیشرفت جنبش اجتماعی می شود.</li>
+                                                <li class="about-us__list"><i class="icon-f fas fa-bread-slice" style="color: #D5AD72;"></i>رویکردهای تکراری برای تقویت استراتژی شرکت</li>
+                                                <li class="about-us__list"><i class="icon-f fas fa-drumstick-bite	" style="color: #D5AD72;"></i>از چارچوب های چابک برای ارائه خلاصه ای قوی استفاده کنید.</li>
                                             </ul>
                                         </div>
                                 </div>
@@ -47,25 +47,25 @@
                     <div class="section-number__wrapper">
                         <div class="section-number__numbers center">
                             <div class="section-number__number">
-                                <h3 class="section-number__count">254</h3>
+                                <h3 id="section-number__view" class="section-number__count">254</h3>
                                 <p class="section-number__caption">بازدید کنندگان هفتگی</p>
                                 <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
 
                             </div>
                             <div class="section-number__number">
-                                <h3 class="section-number__count">12168</h3>
+                                <h3 id="section-numer__guest" class="section-number__count">12168</h3>
                                 <p class="section-number__caption">مهمانان راضی سالانه ما</p>
                                 <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
 
                             </div>
                             <div class="section-number__number">
-                                <h3 class="section-number__count">38</h3>
+                                <h3 id="section-number__cup" class="section-number__count">38</h3>
                                 <p class="section-number__caption">جوایز</p>
                                 <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
 
                             </div>
                             <div class="section-number__number">
-                                <h3 class="section-number__count">172</h3>
+                                <h3 id="section-number__week" class="section-number__count">172</h3>
                                 <p class="section-number__caption">تحویل هفتگی</p>
                                 <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
 
@@ -232,6 +232,6 @@
         </div>
       
     </div>
-   
+   <script src="./Js/about-us.js"></script>
 </body>
 </html>
