--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <div class="menu-static">
+            <div class="menu-static menu-static--show">
                 <div class="menu-static__wrapper">
                     <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
                     <ul class="menu-static__lists center">
