--- a/about us.html
+++ b/about us.html
@@ -193,7 +193,7 @@
                             </div>
                         </div>
                       
-                        <div class="section-galllery__button">از منوی ما دیدن کنید</div>
+                        <div class="section-galllery__button"><a href="file:///C:/Users/ManiPr/Desktop/Programming/Hot%20And%20Cold/menu.html" class="section-gallery__button-link">از منوی ما دیدن کنید</a></div>
                         <div class="section-comment__dot"><span class="sectoin-comment-span"></span></div>
                     </div>
                     <div class="section-gallery__big">
